--- a/src/components/SectionColorBar.css
+++ b/src/components/SectionColorBar.css
@@ -3,7 +3,6 @@
 }
 
 .bar {
-    background-color: #525252;
     width: 4px;
     margin: auto;
     height: 100%;
